Actualizacion del trabajo

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Gestión de personas en la Web</title>
+    <meta charset="UTF-8">
+    <title>Gestión de personas en la Web</title>
 </head>
+
 <body>
-	<form>
-		<label for="correo">Correo: </label>
-		<input type="text" name="correo" placeholder="ingrese el correo..."/>
-		<br>
-		
-		<label for="password">Contraseña: </label>
-		<input type="password" name="password" placeholder="ingrese la contraseña..."/>
-		<br>
-	</form>
-	<ul>
-		<li><a href="/EjemploPersonaWebJDBC/CrearTablaController">Viñedo del amanecer</a></li>
-		<li><a href="HTMLs/crear_persona.html">Aero Postal</a></li>
-		<li><a href="HTMLs/buscar_persona.html">Supermercado 9sito</a></li>
-	</ul>
+    <form>
+        <label for="correo">Correo: </label>
+        <input type="text" name="correo" placeholder="ingrese el correo..." />
+        <br>
+        <!-- Aqui empieza la magia-->
+        <label for="password">Contraseña: </label>
+        <input type="password" name="password" placeholder="ingrese la contraseña..." />
+        <br>
+    </form>
+    <ul>
+        <li><a href="/EjemploPersonaWebJDBC/CrearTablaController">Viñedo del amanecer</a></li>
+        <li><a href="HTMLs/crear_persona.html">Aero Postal</a></li>
+        <li><a href="HTMLs/buscar_persona.html">Supermercado 9sito</a></li>
+    </ul>
 </body>
+
 </html>
