--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -22,15 +22,17 @@
 
         <div class="cont">
             <a href="/EjemploPersonaWebJDBC/CrearTablaController">Viñedo del amanecer <br><br> <img id="vino" src="Recursos/Viñedo el amanecer.jpg" alt="Viñedo el amanecer" /></a>
-
+            <p>El viñedo del amanecer es <br> la bodega principal de <br> licores de Mondstadt <br> y se especializa en elaborar<br> vino de diente de león.</p>
         </div>
 
         <div class="cont">
-            <a href="HTMLs/crear_persona.html">Aero Postal <br><br> <img id="ropa" src="Recursos/Aeropost.jpg" alt="Aeropostale" /></a>
+            <a href="HTMLs/crear_persona.html">Aeropostale <br><br> <img id="ropa" src="Recursos/Aeropost.jpg" alt="Aeropostale" /></a>
+            <p>Es una empresa textil de <br>Estados Unidos dedicada a la<br> venta de ropa informal<br> para jóvenes</p>
         </div>
 
         <div class="cont">
             <a href="HTMLs/buscar_persona.html">Supermercado 9sito <br><br> <img id="comid" src="Recursos/9cito.jpg" alt="9cito" /></a>
+            <p>Es una tienda que <br>ofrese viveres de <br> consumo diario</p>
         </div>
     </div>
 </body>
