Desarrollo de interfaz para los invitados

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Gestión de personas en la Web</title>
+    <title>EmpresasCorp</title>
     <link rel="stylesheet" type="text/css" href="CSS/login.css" />
 </head>
 
@@ -21,17 +21,17 @@
     <div id="empresas">
 
         <div class="cont">
-            <a href="/EjemploPersonaWebJDBC/CrearTablaController">Viñedo del amanecer <br><br> <img id="vino" src="Recursos/Viñedo el amanecer.jpg" alt="Viñedo el amanecer" /></a>
+            <a href="HTMLs/Invitado/invVin.html">Viñedo del amanecer <br><br> <img id="vino" src="Recursos/Viñedo el amanecer.jpg" alt="Viñedo el amanecer" /></a>
             <p>El viñedo del amanecer es <br> la bodega principal de <br> licores de Mondstadt <br> y se especializa en elaborar<br> vino de diente de león.</p>
         </div>
 
         <div class="cont">
-            <a href="HTMLs/crear_persona.html">Aeropostale <br><br> <img id="ropa" src="Recursos/Aeropost.jpg" alt="Aeropostale" /></a>
+            <a href="HTMLs/Invitado/invAer.html">Aeropostale <br><br> <img id="ropa" src="Recursos/Aeropost.jpg" alt="Aeropostale" /></a>
             <p>Es una empresa textil de <br>Estados Unidos dedicada a la<br> venta de ropa informal<br> para jóvenes</p>
         </div>
 
         <div class="cont">
-            <a href="HTMLs/buscar_persona.html">Supermercado 9sito <br><br> <img id="comid" src="Recursos/9cito.jpg" alt="9cito" /></a>
+            <a href="HTMLs/Invitado/inv9ci.html">Supermercado 9sito <br><br> <img id="comid" src="Recursos/9cito.jpg" alt="9cito" /></a>
             <p>Es una tienda que <br>ofrese viveres de <br> consumo diario</p>
         </div>
     </div>
