Creacion de loguin y correccion de dao factory

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <img id="logo" src="Recursos/Logo.png" alt="EmpresasCorp" />
-    <form id="formulario01">
+    <form id="formulario01"  action="Login" method="post">
         <label for="correo">Correo: </label>
         <input type="text" name="correo" placeholder="Ingrese su correo" />
 
