Creacion pags user

--- a/WebContent/HTMLs/Ajax/peticioNumsMail.html
+++ b/WebContent/HTMLs/Ajax/peticioNumsMail.html
@@ -1,10 +1,10 @@
 <table class='tg' style='width:95%'>
     <tr>
-        <th class='tg-46ru'>Numero</th>
-        <th class='tg-46ru'>Tipo</th>
-        <th class='tg-46ru'>Operadora</th>
-        <th class='tg-46ru'></th>
-        <th class='tg-46ru'></th>
+        <th class='tg-46ru'>Nombre</th>
+        <th class='tg-46ru'>Precio</th>
+        <th class='tg-46ru'>Descripcion</th>
+        <th class='tg-46ru'>Imagen</th>
+
     </tr>
 
     <tr>
@@ -12,7 +12,6 @@
         <td class='tg-y698'>2</td>
         <td class='tg-y698'>3</td>
         <td class='tg-y698'><a href=' hamster '> Llamar </a></td>
-        <td class='tg-y698'><a href=' fsdf '>Enviar un mail</a></td>
     </tr>
 
     <tr>
