--- a/WebContent/HTMLs/Invitado/inv9ci.html
+++ b/WebContent/HTMLs/Invitado/inv9ci.html
@@ -2,9 +2,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Guia Telefonica</title>
+    <title>Super Mercado 9cito</title>
 
-    <link rel="stylesheet" type="text/css" href="../../CSS/directorioVin.css" />
+    <link rel="stylesheet" type="text/css" href="../../CSS/directorio9ci.css" />
     <script src='../../JavaScript/busqueda.js'></script>
 
 </head>
@@ -13,7 +13,7 @@
 <body>
 
 
-    <p>Viñedo del Amancer :Menu de Busqueda</p>
+    <p>Super mercado 9cito: Menu de Busqueda</p>
 
     <div id="volver">
         <a href="../../index.html"><img src="../../Recursos/fecha.png"></a>
