--- a/WebContent/HTMLs/Invitado/invAer.html
+++ b/WebContent/HTMLs/Invitado/invAer.html
@@ -2,9 +2,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Guia Telefonica</title>
+    <title>Aeropostale</title>
 
-    <link rel="stylesheet" type="text/css" href="../../CSS/directorioVin.css" />
+
+    <link rel="stylesheet" type="text/css" href="../../CSS/directorioAer.css" />
     <script src='../../JavaScript/busqueda.js'></script>
 
 </head>
@@ -13,7 +14,7 @@
 <body>
 
 
-    <p>Viñedo del Amancer :Menu de Busqueda</p>
+    <p>Aeropostale: Menu de Pedidos</p>
 
     <div id="volver">
         <a href="../../index.html"><img src="../../Recursos/fecha.png"></a>
