Ventana de pedidos

--- a/WebContent/HTMLs/User/usrVin.html
+++ b/WebContent/HTMLs/User/usrVin.html
@@ -20,31 +20,16 @@
     </div>
 
 
-    <button id="uno" onclick='cargarOptPedidos()'> Ver Pedidos </button>
-    <button id="dos" onclick='previusPage()'> Crear Pedidos </button>
+    <form id="verpedidos">
+        <input type="button" value="Ver pedidos" onclick="buscarCat()" /><br>
+    </form>
 
 
 
-    <div id="pantalla">
+    <form id="verpedidos">
+        <input type="button" value="Crear pedidos" onclick="buscarCat()" /><br>
+    </form>
 
-
-
-
-
-
-    </div>
-
-
-    <div id="informacion">
-
-
-
-
-
-
-
-
-    </div>
 
 
 
