Trabajo Casi terminado

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,31 +24,34 @@
          <form action="VisualizacionProductosInvitado" method="post">
        		<div class="cont">
 	            <a>Viñedo del amanecer <br><br> <img id="vino" src="Recursos/Viñedo el amanecer.jpg" alt="Viñedo el amanecer" /></a>
-	            <p>El viñedo del amanecer es <br> la bodega principal de <br> licores de Mondstadt <br> y se especializa en elaborar<br> vino de diente de león.</p>
+	            <p>La bodega principal de  licores de Mondstadt. </p>
 	        	<input id="wine" name="idEmp" type="hidden" value="1" >
-	        	<input type="submit" value="entrar" >
+	        	<input type="submit" value="Entrar" >
 	        </div>
         </form>
 
 
-
-        <div class="cont">
-            <a href="HTMLs/Invitado/invAer.html">Aeropostale <br><br> <img id="ropa" src="Recursos/Aeropost.jpg" alt="Aeropostale" /></a>
-            <p>Es una empresa textil de <br>Estados Unidos dedicada a la<br> venta de ropa informal<br> para jóvenes</p>
-        </div>
-
-
-
-
-		<!-- Cambiar el action para cuando se ponga la lista para los demas -->
-		<form action="EntrarMenuAdm" method="post">
+		<form action="VisualizacionProductosInvitado" method="post">
 	        <div class="cont">
-	            <a href="HTMLs/Invitado/inv9ci.html">Supermercado 9sito <br><br> <img id="comid" src="Recursos/9cito.jpg" alt="9cito" /></a>
-	            <p>Es una tienda que <br>ofrese viveres de <br> consumo diario</p>
-	            <input id="9cito" name="idEmp" type="hidden" value="Carly@gmail.com" >
+	            <a>Aeropostale <br><br> <img id="ropa" src="Recursos/Aeropost.jpg" alt="Aeropostale" /></a>
+	            <p>Es una empresa textil dedicada a la venta de ropa para jóvenes</p>
+	            <input id="ropa" name="idEmp" type="hidden" value="2" >
+	        	<input type="submit" value="Entrar" >
+	        </div>
+		</form>
+
+
+
+		
+		<form action="VisualizacionProductosInvitado" method="post">
+	        <div class="cont">
+	            <a>Supermercado 9cito <br><br> <img id="comid" src="Recursos/9cito.jpg" alt="9cito" /></a>
+	            <p>Es una tienda que ofrece viveres de  consumo diario</p>
+	           <input id="9cit" name="idEmp" type="hidden" value="3" >
 	        	<input type="submit" value="Entrar" >
 	        </div>
 	    </form> 
+	    
     </div>
 </body>
 
